Fixed different rendering height on firefox

--- a/src/idsk/components/footer-extended/footer-extended.scss
+++ b/src/idsk/components/footer-extended/footer-extended.scss
@@ -531,6 +531,9 @@
         background-color: govuk-colour("white");
         @include govuk-media-query($from: tablet) {
             height: 45px;
+            @supports (-moz-appearance:none) {
+                height: 44px;
+            }
         }
     }
 
